--- a/applications/luci-app-wifimanager/Makefile
+++ b/applications/luci-app-wifimanager/Makefile
@@ -11,21 +11,6 @@ LUCI_DEPENDS:=+luci-mod-admin-full
 
 include ../../luci.mk
 
-# call BuildPackage - OpenWrt buildroot signature
-define Package/firewrt/description
-  FireWrt Posix Utilities
-endef
-
-define Package/firewrt
-  SECTION:=sys
-  CATEGORY:=System
-  TITLE:=FireWrt
-endef
-
-define Package/firewrt/description
-  FIREWRT POSIX UTILITIES
-endef
-
 define Build/Prepare
 	mkdir -p $(PKG_BUILD_DIR)
 	$(CP) ./src/* $(PKG_BUILD_DIR)/
@@ -41,9 +26,9 @@ define Build/Compile
 	CFLAGS="$(TARGET_CFLAGS) -Wall -fPIC"
 endef
 
-define Package/firewrt/install
+define Package/luci-app-wifimanager/install
 	$(INSTALL_DIR) $(1)/usr/lib/lua
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/firewrt.so $(1)/usr/lib/lua/firewrt.so
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/wifimanager.so $(1)/usr/lib/lua/wifimanager.so
 endef
 
-$(eval $(call BuildPackage,firewrt))
+$(eval $(call BuildPackage,luci-app-wifimanager))
