--- a/applications/luci-app-wifimanager/Makefile
+++ b/applications/luci-app-wifimanager/Makefile
@@ -7,27 +7,8 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI Wifi Manager
+LUCI_DEPENDS:=+luci-mod-admin-full
 
 include ../../luci.mk
 
-define Build/Prepare
-	mkdir -p $(PKG_BUILD_DIR)
-	$(CP) ./src/* $(PKG_BUILD_DIR)/
-endef
-
-
-define Build/Configure
-endef
-
-define Build/Compile
-	$(MAKE) -C $(PKG_BUILD_DIR) \
-	CC="$(TARGET_CC)" \
-	CFLAGS="$(TARGET_CFLAGS) -Wall -fPIC"
-endef
-
-define Package/luci-app-wifimanager/install
-	$(INSTALL_DIR) $(1)/usr/lib/lua
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/wifimanager.so $(1)/usr/lib/lua/wifimanager.so
-endef
-
-$(eval $(call BuildPackage,luci-app-wifimanager))
+# call BuildPackage - OpenWrt buildroot signature
